--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "plugins/plug.kak"]
 	path = plugins/plug.kak
-	url = https://github.com/andreyorst/plug.kak
-[submodule "colors"]
-	path = colors
-	url = https://github.com/Delapouite/kakoune-colors
+	url = https://github.com/robertmeta/plug.kak
